syntax = "proto3";

option csharp_namespace = "Spravy.EventBus.Protos";

package spravy.event_bus;

import "Protos/event_bus_messages.proto";

service EventBusService {
    rpc PublishEvent (PublishEventRequest) returns (PublishEventReply);
    rpc GetEvents (GetEventsRequest) returns (GetEventsReply);
}